[project]
name = "local-dbutils"
version = "0.1.0"
description = "Local filesystem + PySpark-friendly shim for Databricks dbutils.fs"
readme = "README.md"
requires-python = ">=3.10"
authors = [{ name = "Local Dev" }]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
packages = ["local_dbutils"]

