[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "local_dbutils"
description = ""
authors = [
    { name = "Zheng Zhu", email = "zzhu8192@gmail.com" }
]
requires-python = ">=3.12"
readme = "README.md"
dynamic = ["version"]
dependencies = [
]

[dependency-groups]
test = [
    "pytest>=8.4.2",
    "pytest-xdist>=3.8.0",
]

[tool.uv]
package = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.pyright]
include = ["src", "tests"]
exclude = ["**/__pycache__", "**/.venv"]
pythonVersion = "3.12"
typeCheckingMode = "basic"
reportMissingImports = false
reportMissingTypeStubs = false
reportOptionalMemberAccess = true

[tool.pytest.ini_options]
log_level = "WARNING"
log_cli_level = "WARNING"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = ["-v", "--tb=short"]
filterwarnings = [
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]

